# webpos-product-server/src/main/java/com/example/webpos/order/rest/ProductController.java
@@ -6,6 +6,7 @@ import com.example.webpos.order.model.Product;
 import com.example.webpos.order.rest.api.ProductApi;
 import com.example.webpos.order.rest.dto.CategoryDto;
 import com.example.webpos.order.rest.dto.ProductDto;
+import com.example.webpos.order.rest.dto.UpdateProductQuantityRequestDto;
 import com.example.webpos.order.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -56,7 +57,13 @@ public class ProductController implements ProductApi {
         return ResponseEntity.ok(categoryDtoList);
     }
 
-//    @RequestMapping(value = "/product/clearCache", method = RequestMethod.GET)
+    @Override
+    public ResponseEntity<Void> updateProductQuantity(String productId, UpdateProductQuantityRequestDto updateProductQuantityRequestDto) {
+        productService.updateProductQuantity(productId, updateProductQuantityRequestDto.getQuantity());
+        return ResponseEntity.ok().build();
+    }
+
+    //    @RequestMapping(value = "/product/clearCache", method = RequestMethod.GET)
 //    public void clearCache() {
 //        cacheManager.getCache("product").clear();
 //    }
